--- a/seagrid-view/package.json
+++ b/seagrid-view/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@grpc/grpc-js": "^1.8.8",
+    "@grpc/proto-loader": "^0.7.4",
     "axios": "^1.3.2",
     "core-js": "^3.8.3",
+    "google-protobuf": "^3.21.2",
+    "grpc-web": "^1.4.2",
+    "protobufjs": "^7.2.2",
     "vue": "^3.2.13"
   },
   "devDependencies": {
